Fix #125 - Stretched Images

--- a/assets/css/pages/_home.scss
+++ b/assets/css/pages/_home.scss
@@ -681,6 +681,7 @@ header.home-header {
 			width: 100%;
 			width: 220px !important;
 			min-height: 100%;
+			object-fit: cover;
 		}
 	}
 }
